#56 resolved issue with connections not being closed by Netty Handler